--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Nisheed Jagadish",
   "license": "ISC",
   "devDependencies": {
+    "angular-modal-service": "^0.6.9",
     "babel-core": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
@@ -35,6 +36,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-usemin": "^0.3.16",
     "gulp-webserver": "^0.9.1",
+    "jquery": "^2.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
@@ -44,10 +46,12 @@
     "bootstrap": "^3.3.6"
   },
   "browser": {
-    "angular": "./app/scripts/shims/angular.js"
+    "angular": "./app/scripts/shims/angular.js",
+    "jQuery": "./app/scripts/shims/jquery.js"
   },
   "browserify-shim": {
-    "angular": "angular"
+    "angular": "angular",
+    "jquery": "jQuery"
   },
   "babel": {
     "presets": [
