--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
   "author": "Nisheed Jagadish",
   "license": "ISC",
   "devDependencies": {
-    "angular-modal-service": "^0.6.9",
     "babel-core": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
-    "browser-sync": "^2.11.0",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
     "gulp": "^3.9.0",
@@ -29,21 +27,19 @@
     "gulp-concat": "^2.6.0",
     "gulp-less": "^3.0.5",
     "gulp-minify-css": "^1.2.3",
-    "gulp-minify-html": "^1.0.5",
-    "gulp-ng-annotate": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
-    "gulp-usemin": "^0.3.16",
-    "gulp-webserver": "^0.9.1",
-    "jquery": "^2.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "angular": "^1.4.8",
+    "angular-modal-service": "^0.6.9",
     "angular-local-storage": "^0.2.2",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "browser-sync": "^2.11.0",
+    "jquery": "^2.2.0"
   },
   "browser": {
     "angular": "./app/scripts/shims/angular.js",
